--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ django = "*"
 djangorestframework = "*"
 django-cors-headers = "*"
 djangorestframework-simplejwt = "*"
+threaded = "*"
+requests = "*"
+django-dump-die = "*"
 
 [dev-packages]
 
