--- a/downloadfiles/requirements.txt
+++ b/downloadfiles/requirements.txt
@@ -7,10 +7,12 @@ django-cors-headers==3.14.0
 django-dump-die==0.1.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+gunicorn==20.1.0
 idna==3.4 ; python_version >= '3.5'
 pyjwt==2.6.0 ; python_version >= '3.7'
 pytz==2023.2
 requests==2.28.2
+setuptools==67.6.0 ; python_version >= '3.7'
 sqlparse==0.4.3 ; python_version >= '3.5'
 threaded==4.1.0
 tzdata==2023.2 ; sys_platform == 'win32'
