--- a/downloadfiles/requirements.txt
+++ b/downloadfiles/requirements.txt
@@ -17,3 +17,4 @@ sqlparse==0.4.3 ; python_version >= '3.5'
 threaded==4.1.0
 tzdata==2023.2 ; sys_platform == 'win32'
 urllib3==1.26.15 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+whitenoise==6.4.0
