--- a/downloadfiles/staticfiles/manifest.json
+++ b/downloadfiles/staticfiles/manifest.json
@@ -1,4 +1,7 @@
 {
+  "_vendor-1fd48122.js": {
+    "file": "assets/vendor-1fd48122.js"
+  },
   "index.css": {
     "file": "assets/index-3ac12c5c.css",
     "src": "index.css"
@@ -7,7 +10,10 @@
     "css": [
       "assets/index-3ac12c5c.css"
     ],
-    "file": "assets/index-b50901a6.js",
+    "file": "assets/index-3403845f.js",
+    "imports": [
+      "_vendor-1fd48122.js"
+    ],
     "isEntry": true,
     "src": "index.html"
   }
